# RayTracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cl_gradient.h  cl_processor.h  cl_raytracer.h  cl_raytracer_ext.h  gl_processor.h  transfer_function.h  volume_data.h
include/cl_utils/: cl.hpp  context.h  kernel.h
include/gl_utils/: context.h  control.h  model.h  shader.h  texture.h
src/: cl_demo.cc  cl_gl_demo.cc  cl_gradient.cc  cl_processor.cc  cl_raytracer.cc  cl_raytracer_ext.cc  gl_processor.cc  main.cc  raytracing.cc  transfer_function.cc  volume_data.cc
src/cl_utils/: context.cc  kernel.cc
src/gl_utils/: context.cc  control.cc  model.cc  shader.cc  texture.cc
